KTTL-1772: Fixed spacing of Testimonials carousel. (#1054)

--- a/src/theme/css/frontend/carousel/_testimonials.scss
+++ b/src/theme/css/frontend/carousel/_testimonials.scss
@@ -1,6 +1,6 @@
 .carousel-testimonials {
   @apply overflow-x-hidden;
-  @apply pt-px56 pb-px150;
+  @apply pt-px56 pb-px75;
 
   @screen md {
     @apply py-px50;
